samples/_failures_safe/1761297018_7c6905_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e58c96d1.c: In function ‘main’:
./samples/SAFE/__tmp_e58c96d1.c:157:28: error: missing terminating " character
  157 |         {EVENT_DATA_READY, "Final
      |                            ^~~~~~
./samples/SAFE/__tmp_e58c96d1.c:157:9: error: expected expression at end of input
  157 |         {EVENT_DATA_READY, "Final
      |         ^
./samples/SAFE/__tmp_e58c96d1.c:157:9: error: expected declaration or statement at end of input
